<resources>
    <string name="app_name">Lista infinita dos deuses</string>
    <string name="btnCreateTask">Criar tarefa</string>
    <string name="txt_nova_tarefa">Nova Tarefa</string>
    <string name="txt_addTaskDesc">Adicione uma tarefa que ainda será feita</string>
    <string name="edtTaskTitle">Título da tarefa*</string>
    <string name="edtTaskDesc">Descrição da tarefa</string>
    <string name="btnStartTask">Iniciar tarefa</string>
    <string name="btnExclude">Excluir tarefa</string>
    <string name="btnFinalizeTask">Finalizar Tarefa</string>
    <string name="btnAdd">adicionar</string>
    <string name="edtSearch1">Pesquise por tarefas a serem feitas</string>
    <string name="edtSearch3">Pesquise por tarefas feitas</string>
    <string name="edtSearch2">Pesquise por tarefas em andamento</string>
    <string name="btnSave">Salvar</string>
    <string name="txtoppa_kanban_style">Oppa Kanban Style!</string>
    <string name="title_activity_add_bottom_sheet">AddBottomSheet</string>
    <string name="addtask_erro_titulo">Digite ao menos um título!</string>
    <string name="snack_task_registered_confirmation">Tarefa cadastrada com sucesso!</string>
    <string name="error_find_task">Atividade não encontrada!</string>


    <string name="nothing_image">nothing image</string>
    <string name="to_do_nothing">Vamos adicionar alguma tarefa na lista? 😎</string>
    <string name="to_do_nothing2">Que tal começar a fazer alguma tarefa? 😄</string>
    <string name="to_do_nothing3">Seria bom finalizar alguma tarefa, né? 😉</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_task">search task</string>
</resources>