<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtNewTaskTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:text="@string/txt_nova_tarefa"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtNewTaskDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:text="@string/txt_addTaskDesc"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edtTaskTitleB"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@color/colorLight"
        android:hint="@string/edtTaskTitle" />

    <EditText
        android:id="@+id/edtTaskDescB"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="12dp"
        android:layout_gravity="center"
        android:background="@color/colorLight"
        android:gravity="start"
        android:hint="@string/edtTaskDesc"
        android:paddingTop="15dp" />

    <Button
        android:id="@+id/btnCreateTaskB"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:background="@drawable/layout_bg_small"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/btnCreateTask"
        android:textAllCaps="false"
        android:textColor="@color/colorLight"
        android:layout_marginBottom="50dp"
        android:textSize="15sp" />

</LinearLayout>