<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.AddBottomSheet"
    android:backgroundTint="@color/colorAccent"
    android:background="@drawable/layout_bg_top"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtNewTaskTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_nova_tarefa"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_marginStart="60dp"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txtNewTaskDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_addTaskDesc"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginStart="60dp"
        app:layout_constraintTop_toBottomOf="@id/txtNewTaskTitle"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/edtTaskTitle"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorLight"
        android:hint="@string/edtTaskTitle"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNewTaskDesc"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/edtTaskDesc"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorLight"
        android:hint="@string/edtTaskDesc"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:gravity="start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTaskTitle"
        tools:ignore="RtlSymmetry"/>

    <Button
        android:id="@+id/btnCreateTask"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/layout_bg_small"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/btnCreateTask"
        android:textColor="@color/colorLight"
        android:textSize="15sp"
        android:layout_marginTop="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTaskDesc" />


</androidx.constraintlayout.widget.ConstraintLayout>