<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    android:backgroundTint="@color/colorAccent"
    app:behavior_peekHeight="450dp"
    android:background="@drawable/layout_bg_top"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtNewTaskTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="56dp"
        android:layout_marginTop="60dp"
        android:text="@string/txt_nova_tarefa"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/txtNewTaskDesc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtNewTaskDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_addTaskDesc"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtNewTaskTitle" />

    <ImageView
        android:id="@+id/imgLineHorizontal1"
        android:layout_width="150dp"
        android:layout_height="6dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/layout_bg_small"
        android:backgroundTint="@color/colorPrimaryDark"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/edtTaskTitleB"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@color/colorLight"
        android:hint="@string/edtTaskTitle"
        android:paddingStart="15dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/txtNewTaskDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtTaskDescB"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="13dp"
        android:background="@color/colorLight"
        android:gravity="start"
        android:hint="@string/edtTaskDesc"
        android:paddingTop="15dp"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTaskTitleB" />

    <Button
        android:id="@+id/btnCreateTaskB"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/layout_bg_small"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/btnCreateTask"
        android:textAllCaps="false"
        android:textColor="@color/colorLight"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTaskDescB" />

</androidx.constraintlayout.widget.ConstraintLayout>