<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_bg_top"
    android:backgroundTint="@color/colorAccent"
    tools:context=".ui.AddTaskActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="713dp"
        android:layout_gravity="top|center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtNewTaskTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_nova_tarefa"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/lineHorizontal"
            android:layout_width="150dp"
            android:layout_height="6dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/layout_bg_small"
            android:backgroundTint="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtNewTaskDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/txt_addTaskDesc"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtNewTaskTitle" />

        <EditText
            android:id="@+id/edtTaskTitle"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorLight"
            android:hint="@string/edtTaskTitle"
            android:paddingStart="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtNewTaskDesc"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/edtTaskDesc"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_marginTop="12dp"
            android:background="@color/colorLight"
            android:gravity="start"
            android:hint="@string/edtTaskDesc"
            android:paddingStart="15dp"
            android:paddingTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtTaskTitle"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/btnCreateTask"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:background="@drawable/layout_bg_small"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/btnCreateTask"
            android:textAllCaps="false"
            android:textColor="@color/colorLight"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtTaskDesc" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
