<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_bg_top"
        android:backgroundTint="@color/colorAccent"
        tools:context=".ui.EditTaskBSheetFragment">

        <TextView
            android:id="@+id/txtTaskTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="70dp"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Estudar tudo!" />

        <ImageView
            android:id="@+id/imgLineHorizontal"
            android:layout_width="150dp"
            android:layout_height="6dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/layout_bg_small"
            android:backgroundTint="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgLine"
            android:layout_width="2dp"
            android:layout_height="55dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="70dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnReturn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="70dp"
            android:backgroundTint="@color/colorAccent"
            android:src="@drawable/ic_arrow"
            app:layout_constraintEnd_toStartOf="@+id/imgLine"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtTaskStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtTaskTitle"
            tools:text="Doing" />

        <EditText
            android:id="@+id/edtTaskTitle"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorLight"
            android:hint="@string/edtTaskTitle"
            android:paddingStart="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTaskStatus"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/edtTaskDesc"
            android:layout_width="350dp"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorLight"
            android:gravity="start"
            android:hint="@string/edtTaskDesc"
            android:paddingStart="15dp"
            android:paddingTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtTaskTitle"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/btnFinalizeTask"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/layout_bg_small"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/btnSave"
            android:textColor="@color/colorLight"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtTaskDesc" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>